--- a/estilos.css
+++ b/estilos.css
@@ -69,7 +69,7 @@ form{
         border: none;
         border-radius: 5px;
         font-size: 25px;
-        background:  linear-gradient( to right, red,yellow, rgb(56, 109, 244), rgb(28, 28, 255))
+        background:  brown
     }
 
     
